kom-och-ga-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: comeandgo-web
   namespace: comeandgo
spec:
   revisionHistoryLimit: 1
   replicas: 1
   selector:
      matchLabels:
         app: comeandgo-web
   template:
      metadata:
         labels:
            app: comeandgo-web
      spec:
         securityContext:
            runAsNonRoot: true
            seccompProfile:
               type: RuntimeDefault
         containers:
            - name: comeandgo-web
              image: harbor.vgregion.se/sysutv/utforskande/comeandgo/comeandgo-web:latest
              imagePullPolicy: Always
              ports:
                 - containerPort: 3000
              securityContext:
                 allowPrivilegeEscalation: false
                 capabilities:
                    drop:
                       - ALL
         imagePullSecrets:
            - name: harbor-credentials
