kom-och-ga-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: comeandgo-web
   namespace: comeandgo
spec:
   selector:
      app: comeandgo-web
   ports:
      - protocol: TCP
        port: 80
        targetPort: 3000
   type: ClusterIP
